--- a/Day8 Using Functions and Caesar Cipher Encryption.ipynb
+++ b/Day8 Using Functions and Caesar Cipher Encryption.ipynb
@@ -65,24 +65,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Amine:\n",
+      " what is it like in Beni Mellal\n",
+      "The number of cans needed for  wall with a height of 3m, width 9m and a coverage of 5 is 6\n"
+     ]
+    }
+   ],
    "source": [
-    "import string\n",
-    "message = list(input(\"please put the message you wanne encrypt\"))\n",
-    "cypher = 1\n",
-    "\n",
-    "\n",
-    "alphabet = list(string.ascii_lowercase)\n",
-    "print(alphabet)\n",
-    "\n",
-    "crypted = []\n",
-    "for index in range(len(message)):\n",
-    "    message[index] = alphabet[index + 1]\n",
-    "    crypted = message\n",
-    "print(crypted)\n",
-    "    \n",
     "def greet_with(name, location):\n",
     "    print(f\"Hello {name}:\\n what is it like in {location}\")\n",
     "greet_with(\"Amine\", \"Beni Mellal\")\n",
@@ -91,7 +87,7 @@
     "def painting_can_calculator(height, width, coverage):\n",
     "    number_of_cans = (height * width) / coverage\n",
     "    cans = math.ceil(number_of_cans)\n",
-    "    print(f\"The number of cans needed for  wall with a height of {height}m, width {width}m and a coverage of {coverage} is {cans}\")\n",
+    "    print(f\"The number of cans needed for wall with a height of {height}m, width {width}m and a coverage of {coverage} is {cans}\")\n",
     "painting_can_calculator(3, 9, 5)"
    ]
   }
