--- a/Day 9  - Dictionaries, Nesting and the Secret Auction/Dictionaries.ipynb
+++ b/Day 9  - Dictionaries, Nesting and the Secret Auction/Dictionaries.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -60,16 +60,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_items([('Bug', 'An error in a program that prevents the program from running as expected.'), ('Function', 'A piece of code that you can easily call over and over again.'), ('Loop', 'The action of doing something again and again (for a known number of time)')])\n",
-      "dict_keys(['Bug', 'Function', 'Loop'])\n",
-      "dict_values(['An error in a program that prevents the program from running as expected.', 'A piece of code that you can easily call over and over again.', 'The action of doing something again and again (for a known number of time)'])\n"
+      "dict_items([('Bug', 'An error in a program that prevents the program from running as expected.'), ('Function', 'A piece of code that you can easily call over and over again.')])\n",
+      "dict_keys(['Bug', 'Function'])\n",
+      "dict_values(['An error in a program that prevents the program from running as expected.', 'A piece of code that you can easily call over and over again.'])\n"
      ]
     }
    ],
@@ -77,7 +77,6 @@
     "programming_dictionary = {\n",
     "    \"Bug\": \"An error in a program that prevents the program from running as expected.\", \n",
     "    \"Function\": \"A piece of code that you can easily call over and over again.\",\n",
-    "    \"Loop\": \"The action of doing something again and again (for a known number of time)\",\n",
     "}\n",
     "# Using built in function to get a look into our dictionary\n",
     "print(programming_dictionary.items())\n",
@@ -89,10 +88,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Bug': 'An error in a program that prevents the program from running as expected.', 'Function': 'A piece of code that you can easily call over and over again.', 'Loop': 'The action of doing something again and again (for a known number of time)'}\n",
+      "3\n",
+      "{'Bug': 'An error in a program that prevents the program from running as expected.', 'Function': 'A piece of code that you can easily call over and over again.', 'Loop': 'The action of doing something again and again (for a known number of time)', 'Test': 'Value'}\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# adding data to an exesting dictionary \n",
+    "programming_dictionary[\"Loop\"] = \"The action of doing something again and again (for a known number of time)\"\n",
+    "print(programming_dictionary)\n",
+    "print(len(programming_dictionary))\n",
+    "\n",
+    "# Using update methode\n",
+    "programming_dictionary.update({\"Test\": \"Value\"})\n",
+    "print(programming_dictionary)\n",
+    "print(len(programming_dictionary))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# wipping an entire dictionary using both function\n",
+    "programming_dictionary = dict()\n",
+    "programming_dictionary = {}\n",
+    "print(programming_dictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('a', 10)\n",
+      "('b', 20)\n",
+      "('c', 30)\n",
+      "10\n",
+      "20\n",
+      "30\n",
+      "a\n",
+      "b\n",
+      "c\n"
+     ]
+    }
+   ],
+   "source": [
+    "# looping through a dictionary \n",
+    "my_dict = {'a': 10, 'b': 20, 'c': 30}\n",
+    "\n",
+    "# getting all the elements\n",
+    "for elements in my_dict.items():\n",
+    "    print(elements)\n",
+    "\n",
+    "# getting all the values\n",
+    "for values in my_dict.values():\n",
+    "    print(values)\n",
+    "\n",
+    "# getting all the keys\n",
+    "for keys in my_dict.keys():\n",
+    "    print(keys)"
+   ]
   }
  ],
  "metadata": {
