Initial Bidder Input and Decision Handling

--- a/Day 9  - Dictionaries, Nesting and the Secret Auction/Dictionaries.ipynb
+++ b/Day 9  - Dictionaries, Nesting and the Secret Auction/Dictionaries.ipynb
@@ -171,6 +171,181 @@
     "for keys in my_dict.keys():\n",
     "    print(keys)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Nesting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John's age: 30\n",
+      "Alice's skills: ['Java', 'C++', 'Web Development']\n",
+      "Bob's position: Database Administrator\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Nesting in dictionaries refers to the practice of placing one dictionary inside another. \n",
+    "\n",
+    "# Nested Dictionary\n",
+    "employee_data = {\n",
+    "    'John': {\n",
+    "        'age': 30,\n",
+    "        'position': 'Data Scientist',\n",
+    "        'skills': ['Python', 'Machine Learning', 'SQL']\n",
+    "    },\n",
+    "    'Alice': {\n",
+    "        'age': 25,\n",
+    "        'position': 'Software Engineer',\n",
+    "        'skills': ['Java', 'C++', 'Web Development']\n",
+    "    },\n",
+    "    'Bob': {\n",
+    "        'age': 35,\n",
+    "        'position': 'Database Administrator',\n",
+    "        'skills': ['SQL', 'Database Management']\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "# Accessing nested data\n",
+    "print(\"John's age:\", employee_data['John']['age'])\n",
+    "print(\"Alice's skills:\", employee_data['Alice']['skills'])\n",
+    "print(\"Bob's position:\", employee_data['Bob']['position'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'France': {'Cities Visited': ['Paris', 'Lille', 'Dijon']}, 'Germany': ['Berlin', 'Hamburg', 'Stuttgart']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "travel_log = {\n",
+    "  \"France\": [\"Paris\", \"Lille\", \"Dijon\"],\n",
+    "  \"Germany\": [\"Berlin\", \"Hamburg\", \"Stuttgart\"],\n",
+    "}\n",
+    "\n",
+    "# adding another key called cities_visited for our travel log\n",
+    "for key in travel_log:\n",
+    "  if key == \"France\":\n",
+    "    travel_log[key] = {\"Cities Visited\": [\"Paris\", \"Lille\", \"Dijon\"]}\n",
+    "print(travel_log)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = \"type(55/23)\"\n",
+    "eval(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quiz Question Answers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'b': 2, 'c': 3, 'd': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict = {\n",
+    "    \"a\": 1,\n",
+    "    \"b\": 2,\n",
+    "    \"c\": 3,\n",
+    "}\n",
+    "\n",
+    "dict[\"d\"] = 4\n",
+    "print(dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 2, 'b': 3, 'c': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict = {\n",
+    "    \"a\": 1,\n",
+    "    \"b\": 2,\n",
+    "    \"c\": 3,\n",
+    "}\n",
+    "\n",
+    "for key in dict:\n",
+    "    dict[key] += 1\n",
+    "print(dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Steak\n"
+     ]
+    }
+   ],
+   "source": [
+    "order = {\n",
+    "    \"starter\": {1: \"Salad\", 2: \"Soup\"},\n",
+    "    \"main\": {1: [\"Burger\", \"Fries\"], 2: [\"Steak\"]},\n",
+    "    \"dessert\": {1: [\"Ice Cream\"], 2: []},\n",
+    "}\n",
+    "print(order[\"main\"][2][0])"
+   ]
   }
  ],
  "metadata": {
