--- a/Day 10 - Functions with Outputs and Calculator Program/Functions with Outputs.ipynb
+++ b/Day 10 - Functions with Outputs and Calculator Program/Functions with Outputs.ipynb
@@ -56,6 +56,26 @@
    "source": [
     "new_name = format_name(\"john\", \"snow\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add(a, b):\n",
+    "    \"\"\"\n",
+    "    Add two numbers and return the result.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    a (int): First number\n",
+    "    b (int): Second number\n",
+    "    \n",
+    "    Returns:\n",
+    "    int: Sum of a and b\n",
+    "    \"\"\"\n",
+    "    return a + b"
+   ]
   }
  ],
  "metadata": {
