Day 10 Quiz Answers

--- a/Day 10 - Functions with Outputs and Calculator Program/Functions with Outputs.ipynb
+++ b/Day 10 - Functions with Outputs and Calculator Program/Functions with Outputs.ipynb
@@ -76,6 +76,100 @@
     "    \"\"\"\n",
     "    return a + b"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"A Python docstring is a string used to document a Python module, class, function or method,\n",
+    " so programmers can understand what it does without having to read the details of the implementation.\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quiz Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add(n1, n2):\n",
+    "  return n1 + n2\n",
+    " \n",
+    "def subtract(n1, n2):\n",
+    "  return n1 - n2\n",
+    " \n",
+    "def multiply(n1, n2):\n",
+    "  return n1 * n2\n",
+    " \n",
+    "def divide(n1, n2):\n",
+    "  return n1 / n2\n",
+    " \n",
+    "print(add(2, multiply(5, divide(8, 4))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "def outer_function(a, b):\n",
+    "    def inner_function(c, d):\n",
+    "        return c + d\n",
+    "    return inner_function(a, b)\n",
+    " \n",
+    "result = outer_function(5, 10)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_function(a):\n",
+    "    if a < 40:\n",
+    "        return\n",
+    "        print(\"Terrible\")\n",
+    "    if a < 80:\n",
+    "        return \"Pass\"\n",
+    "    else:\n",
+    "        return \"Great\"\n",
+    "print(my_function(25))"
+   ]
   }
  ],
  "metadata": {
