Add basic Blackjack game logic with user choice to Hit or Stand

--- a/Day 11 - The Blackjack Capstone Project/List - Dictionary - Comprehension.ipynb
+++ b/Day 11 - The Blackjack Capstone Project/List - Dictionary - Comprehension.ipynb
@@ -2,6 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Original data\n",
+    "names = ['Jenny', 'Alexus', 'Sam', 'Grace']\n",
+    "heights = [161, 180, 178, 164]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zipped list of students and heights: [('Jenny', 161), ('Alexus', 180), ('Sam', 178), ('Grace', 164)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Zipping lists using list comprehension\n",
+    "students_list = [(name, height) for name, height in zip(names, heights)]\n",
+    "print(\"Zipped list of students and heights:\", students_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -9,52 +39,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Jenny': 61, 'Alexus': 70, 'Sam': 67, 'Grace': 64}\n"
+      "Zipped dictionary of students and heights: {'Jenny': 161, 'Alexus': 180, 'Sam': 178, 'Grace': 164}\n"
      ]
     }
    ],
    "source": [
-    "names = ['Jenny', 'Alexus', 'Sam', 'Grace']\n",
-    "heights = [161, 180, 178, 164]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('Jenny', 61), ('Alexus', 70), ('Sam', 67), ('Grace', 64)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# zipping a 2 list using list comprehension\n",
-    "studens_list = [x for x in zip(names, heights) ]\n",
-    "print(studens_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Jenny': 61, 'Alexus': 70, 'Sam': 67, 'Grace': 64}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# zipping lists using dictionary comprehension\n",
-    "student_info = {x:y for x, y in zip(names, heights)}\n",
-    "print(student_info)\n",
-    "# students = {key: value for key, value in zip(names,heights)}"
+    "# Zipping lists using dictionary comprehension\n",
+    "student_info = {name: height for name, height in zip(names, heights)}\n",
+    "print(\"Zipped dictionary of students and heights:\", student_info)"
    ]
   }
  ],
