--- a/Day 13 - Debugging How to Find and Fix Errors in your Code/Debugging.ipynb
+++ b/Day 13 - Debugging How to Find and Fix Errors in your Code/Debugging.ipynb
@@ -51,11 +51,164 @@
     "\n",
     "# mutate([1,2,3,5,8,13])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You got it\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Describe Problem\n",
+    "def my_function():\n",
+    "  for i in range(1, 21):\n",
+    "    if i == 20:\n",
+    "      print(\"You got it\")\n",
+    "my_function()\n",
+    "# The problem here was that the range function excluded 20 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❻\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reproduce the Bug\n",
+    "from random import randint\n",
+    "dice_imgs = [\"❶\", \"❷\", \"❸\", \"❹\", \"❺\", \"❻\"]\n",
+    "dice_num = randint(1,6)\n",
+    "print(dice_imgs[dice_num-1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are a Gen Z.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Play Computer\n",
+    "year = int(input(\"What's your year of birth?\"))\n",
+    "if year > 1980 and year < 1994:\n",
+    "  print(\"You are a millenial.\")\n",
+    "elif year >= 1994:\n",
+    "  print(\"You are a Gen Z.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You can drive at age 29.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fix the Errors\n",
+    "age = int(input(\"How old are you?\"))\n",
+    "if age > 18:\n",
+    "  print(f\"You can drive at age {age}.\")\n",
+    "# we fixed the erors using the int(function) and the f_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "10\n",
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Print is Your Friend\n",
+    "pages = 0\n",
+    "word_per_page = 0\n",
+    "pages = int(input(\"Number of pages: \"))\n",
+    "word_per_page = int(input(\"Number of words per page: \"))\n",
+    "total_words = pages * word_per_page\n",
+    "print(word_per_page)\n",
+    "print(pages)\n",
+    "print(total_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 10, 16, 26]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Use a Debugger\n",
+    "def mutate(a_list):\n",
+    "  b_list = []\n",
+    "  for item in a_list:\n",
+    "    new_item = item * 2\n",
+    "    b_list.append(new_item)\n",
+    "  print(b_list)\n",
+    "\n",
+    "mutate([1,2,3,5,8,13])"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
